--- a/CareDirection/CareDirection/Resources/Storyboard/TakingProductRegist.storyboard
+++ b/CareDirection/CareDirection/Resources/Storyboard/TakingProductRegist.storyboard
@@ -415,6 +415,7 @@
                             <constraint firstItem="eG9-sX-FsT" firstAttribute="top" secondItem="yEG-Nh-GNu" secondAttribute="bottom" constant="20" id="cq6-bB-e4a"/>
                             <constraint firstItem="TnA-qf-5ZP" firstAttribute="trailing" secondItem="I4P-27-Kqf" secondAttribute="trailing" id="eJM-49-Eqw"/>
                             <constraint firstItem="eG9-sX-FsT" firstAttribute="trailing" secondItem="I4P-27-Kqf" secondAttribute="trailing" id="joU-Ep-Ub5"/>
+                            <constraint firstItem="TnA-qf-5ZP" firstAttribute="top" secondItem="I4P-27-Kqf" secondAttribute="top" id="qcg-as-Va3"/>
                             <constraint firstItem="I4P-27-Kqf" firstAttribute="trailing" secondItem="nsU-Qq-6pc" secondAttribute="trailing" constant="222.5" id="rJl-qM-wOP"/>
                             <constraint firstItem="s2l-Fw-nS2" firstAttribute="bottom" secondItem="I4P-27-Kqf" secondAttribute="bottom" id="unJ-Gs-Pfc"/>
                             <constraint firstItem="s2l-Fw-nS2" firstAttribute="trailing" secondItem="I4P-27-Kqf" secondAttribute="trailing" id="zqQ-mZ-sdP"/>
